--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Monochrome It!</title>
+  <title>microweb</title>
   <style>
     body {
       width: 300px;
@@ -212,7 +212,7 @@
 </head>
 
 <body>
-  <h1>Monochrome It!</h1>
+  <h1>microweb</h1>
   <div id="page-indicator" class="page-indicator">Loading...</div>
 
   <div class="control-group">
