Rename Monochrome to Grayscale in UI and README

--- a/popup.html
+++ b/popup.html
@@ -217,7 +217,7 @@
 
   <div class="control-group">
     <div class="toggle-row">
-      <label for="mono-toggle">Monochrome</label>
+      <label for="mono-toggle">Grayscale</label>
       <label class="switch">
         <input type="checkbox" id="mono-toggle" checked>
         <span class="slider"></span>
